<resources>    <string name="app_name">My Score</string>    <string name="about_app">About</string>    <string name="add_Record">Add New Record</string>    <string name="score_number">Score Number</string>    <string name="enter_name">Enter Name</string>    <string name="enter_score">Enter Your Score</string>    <string name="add_button">Add Score</string>    <string name="current_date">Current Date</string>    <string name="current_time">Current Time</string></resources>