<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:orientation="vertical"    android:layout_height="match_parent"    tools:context=".AddRecord">    <include        layout="@layout/app_bar"        android:id="@+id/app_bar"></include>    <EditText        android:id="@+id/editName"        android:layout_width="match_parent"        android:padding="20dp"        android:layout_height="wrap_content"        android:layout_marginLeft="16dp"        android:layout_marginTop="8dp"        android:layout_marginRight="16dp"        android:hint="@string/enter_name"        android:inputType="text"        android:maxLines="1"        android:textSize="16sp" />    <EditText        android:id="@+id/editScore"        android:padding="20dp"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:maxLength="10"        android:inputType="number"        android:textSize="16sp"        android:layout_marginTop="8dp"        android:maxLines="1"        android:layout_marginLeft="16dp"        android:layout_marginRight="16dp"        android:hint="@string/enter_score" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <ImageView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:src="@drawable/ic_baseline_today_24px"            android:layout_marginLeft="16dp"            android:layout_marginRight="16dp"            android:layout_gravity="left"            android:contentDescription="icon"            android:layout_marginTop="8dp" />        <TextView            android:id="@+id/currentDate"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:hint="@string/current_date"            android:layout_gravity="left"            android:textSize="16sp"            android:layout_marginRight="16dp" />        <ImageView            android:layout_width="wrap_content"            android:contentDescription="icon"            android:layout_height="wrap_content"            android:src="@drawable/ic_baseline_query_builder_24px"            android:layout_marginLeft="16dp"            android:layout_marginRight="16dp"            android:layout_gravity="right"            android:layout_marginTop="8dp" />        <TextView            android:id="@+id/currentTime"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:hint="@string/current_time"            android:textSize="16sp"            android:layout_gravity="right"            android:layout_marginRight="16dp" />    </LinearLayout>    <Button        android:id="@+id/buttonAddScore"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/add_button"        android:textSize="16sp"        android:padding="24dp"        android:layout_gravity="center"        android:layout_marginLeft="16dp"        android:layout_marginRight="16dp"        android:layout_marginTop="8dp" /></LinearLayout>